fix: java 18 issues